2007-01-21  Peter Williams  <peter@newton.cx>

	* omega: Move files into here, so 'import omega' from the toplevel
	works if PYTHONPATH includes '.'. 

	* demo/Makefile.am: Add this too.
	
	* Makefile.am, configure.ac: Tweaks for the above.
	
2007-01-21  Peter Williams  <peter@newton.cx>

	* bag.py (Bag.linkTo): Add basic 'linking' support, which allows
	making one sink feed into another. Going to be used for processing
	the incoming data streams. Also work a bit on what is an iter and
	what is a list, because you can only iterate over an iter once.

	* base.py (RectDataPainter.doChunkPaint): Fix obsolete references
	to self.pointStamp.
	(StreamSink.linkTo): Add this method.
	(Painter): fix init of mainStyle, duh.

2007-01-21  Peter Williams  <peter@newton.cx>

	* styles.py: Move TestStyle here; new file for holding
	various style classes.

	* bag.py: Move Bag here, new file.

	* sources.py: Move FuncSource here as Function; new file
	for holding various data source classes.

	* base.py: Above classes moved from here.

2007-01-20  Peter Williams  <peter@newton.cx>

	* stamps.py: New file, contains a bunch of generic
	stamps (formerly PointPainters). 

	* demo/stampDemo.py: New file, demos the stamps.

	* gtkUtil.py: New file, put the Gtk widgets and
	GtkOmegaDemo here.

2007-01-19  Peter Williams  <peter@newton.cx>

	* Project import.
